GSS NEWS -- History of user-visible changes.                    -*- outline -*-
Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
See the end for copying conditions.

* Version 0.0.24 (unreleased)

** Fix non-portable use of brace expansion in makefiles.

** Update gnulib files.

* Version 0.0.23 (released 2007-12-19)

** Use gettext 0.17.

** Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 0.0.22 (released 2007-06-29)

** GSS is now licensed under the GPL version 3 or later.

** GSS is now developed using Git instead of CVS.
A public git mirror is available from <http://repo.or.cz/w/gss.git>.

** API and ABI modifications.
No changes since last version.

* Version 0.0.21 (released 2007-05-22)

** Fix 'make distclean'.
Now src/gss_cmd.c and src/gss_cmd.h is only removed by 'make
maintainer-clean'.  Thanks to Bernd Zeimetz <bernd@bzed.de> and Russ
Allbery <rra@stanford.edu>.

** Gnulib file update.

** API and ABI modifications.
No changes since last version.

* Version 0.0.20 (released 2007-04-16)

** Gnulib file update.

** API and ABI modifications.
No changes since last version.

* Version 0.0.19 (released 2007-01-09)

** Corrected years in copyright notices.

** Fixed a 64-bit bug in asn1.c:gss_decapsulate_token().
The bug resulted in 'make check' failures on AMD64 systems.  Reported
by Kurt Roeckx <kurt@roeckx.be>.

** Now autoconf 2.61, automake 1.10, and gettext 0.16 is required.

** Gnulib file update.

** API and ABI modifications.
No changes since last version.

* Version 0.0.18 (released 2006-11-06)

** Kerberos V5 gss_acquire_cred doesn't use the default realm when looking
** for hostkeys.
This was the reason that 'make check' failed earlier.

** Gnulib file update, including a rewrite of `gss_check_version'.

** API and ABI modifications.
No changes since last version.

* Version 0.0.17 (released 2006-04-30)

** Debian packages are available from http://josefsson.org/gss/debian/
