@@ -31,10 +31,6 @@ ACLOCAL_AMFLAGS = -I m4 -I gl/m4
 
 # Maintainer targets
 
-update-po: refresh-po
-	-cg-add `ls po/*.po | grep -v quot.po`
-	cg-commit -m "Sync with TP." po/LINGUAS `ls po/*.po | grep -v quot.po`
-
 ChangeLog:
 	git log --pretty --numstat --summary | git2cl > ChangeLog
 	cat .clcopying >> ChangeLog
